@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <scraper framework="1.1" date="2012-07-12">
 	<CreateAlbumSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url cache=&quot;tadb-\1-album.json&quot;&gt;http://www.theaudiodb.com/api/v1/json/58424d43204d6564696120/searchalbum.php?s=$$4&a=\1&lt;/url&gt;" dest="3">
+		<RegExp input="$$1" output="&lt;url cache=&quot;tadb-\1-album.json&quot;&gt;https://www.theaudiodb.com/api/v1/json/58424d43204d6564696120/searchalbum.php?s=$$4&a=\1&lt;/url&gt;" dest="3">
 			<RegExp input="$$2" output="\1" dest="4">
 				<expression noclean="1">(.+)</expression>
 			</RegExp>
@@ -16,7 +16,7 @@
 	</CreateAlbumSearchUrl>
 	<GetAlbumSearchResults dest="8">
 		<RegExp input="$$5" output="&lt;results&gt;\1&lt;/results&gt;" dest="8">
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;year&gt;\4&lt;/year&gt;&lt;artist&gt;\3&lt;/artist&gt;&lt;title&gt;\2&lt;/title&gt;&lt;url cache=&quot;tadb-\3-album.json&quot;&gt;http://www.theaudiodb.com/api/v1/json/58424d43204d6564696120/album.php?m=\1&lt;/url&gt;&lt;/entity&gt;" dest="5">
+			<RegExp input="$$1" output="&lt;entity&gt;&lt;year&gt;\4&lt;/year&gt;&lt;artist&gt;\3&lt;/artist&gt;&lt;title&gt;\2&lt;/title&gt;&lt;url cache=&quot;tadb-\3-album.json&quot;&gt;https://www.theaudiodb.com/api/v1/json/58424d43204d6564696120/album.php?m=\1&lt;/url&gt;&lt;/entity&gt;" dest="5">
 				<expression repeat="yes">&quot;idAlbum&quot;:&quot;([^&quot;]*)&quot;,&quot;idArtist&quot;:&quot;[^&quot;]*&quot;,&quot;idLabel&quot;:[^,]*,&quot;strAlbum&quot;:&quot;([^&quot;]*)&quot;,&quot;strAlbumStripped&quot;:&quot;[^&quot;]*&quot;,&quot;strArtist&quot;:&quot;([^&quot;]*)&quot;,&quot;strArtistStripped&quot;:&quot;[^&quot;]*&quot;,&quot;intYearReleased&quot;:&quot;([^&quot;]*)&quot;</expression>
 			</RegExp>
 			<expression noclean="1" />
